aggiunto bottone per il back to top

--- a/MyFantaManager/MyFantaManager.csproj
+++ b/MyFantaManager/MyFantaManager.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\app\app.js" />
     <Content Include="wwwroot\app\Controllers\playersListController.js" />
     <Content Include="wwwroot\app\main.js" />
   </ItemGroup>
